fixed css spacings

--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ nav ul {
   margin-right:15px;
   list-style: none;
   top: 95px;
-
 }
 nav ul li {
   display: inline-block;
@@ -129,7 +128,6 @@ footer .footer-col h1 {
   padding: 19px 0px 6px 0px;
   letter-spacing: 0.25em;
   text-transform: uppercase;
-
 }
 footer .footer-col ul {
   list-style-type: none;
@@ -157,7 +155,6 @@ footer .footer-col ul li {
 .social ul li a:hover{
   color: white;
 }
-
 footer .footer-col ul li:hover {
   color: white;
   transition: .05s;
@@ -184,7 +181,6 @@ footer .footer-col ul li:hover {
     font-size: 14px;
   }
 }
-
 @media screen and (max-width: 640px) {
     footer .footer-col {
       width: 50%;
@@ -206,9 +202,6 @@ footer .footer-col ul li:hover {
 .nav{
   position:absolute;
 }
-/* .products{
-  vertical-align: top;
-} */
 .product{
   display:inline-block;
   position:relative;
@@ -302,7 +295,6 @@ footer .footer-col ul li:hover {
   cursor: pointer;
   color:red;
 }
-
 .cart-total{
   margin-right: 12%;
   text-align: right;
